--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -6,10 +6,9 @@
                 <span flex style="max-height: 10px;"></span>
                 <input class="fade-in search-input-box" ng-show="showDraftTools || vm.q" type="search"
                        ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Drafts..."/>
-                <md-button  style="font-size: 16px; margin-top: -5px;margin-right: -5px;"
-                           class="md-fab md-button-fab-small md-primary" md-theme="{{themePrimaryButtons}}"
+                <md-button  style="font-size: 16px; margin-top: -5px;margin-right: -5px;" class="md-fab md-mini md-primary" md-theme="{{themePrimaryButtons}}"
                            ng-click="vm.saveAllDirtyDrafts()">
-                    <md-icon class="fa" md-font-icon="fa-check" style="margin-top: -8px"></md-icon>
+                    <md-icon class="fa center-md-icon" md-font-icon="fa-check"></md-icon>
                     <md-tooltip>Save All Changes</md-tooltip>
                 </md-button>
             </div>
@@ -33,7 +32,7 @@
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
                           style="margin-right: 4px;"></span>
                 </span>
-                <span style="max-width: 225px;min-width: 225px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                <span style="max-width: 215px;min-width: 215px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
                     <span style="padding: 8px">Desired Time</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
@@ -42,9 +41,9 @@
             </div>
         </md-toolbar>
         <div class="schedule-draft-data-list" style="direction: rtl" flex>
-            <div ng-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse | limitTo:vm.limitTo) track by $index"
+            <div ng-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse | limitTo:vm.limitTo) track by item.id_code"
                  ng-click="vm.setSelectedScheduleDraft(item)"
-                 ng-class="{'selected-draft-schedule-row': item === vm.selectedScheduleDraft}" class="schedule-draft-item animate-repeat-opacity" layout="column" post-ng-repeat-load-more>
+                 ng-class="{'selected-draft-schedule-row': item.id_code === vm.selectedScheduleDraft.id_code}" class="schedule-draft-item animate-repeat-opacity" layout="column" post-ng-repeat-load-more>
                 <div layout="row" layout-align="center center" style="max-height: 38px;">
                     <md-progress-circular md-theme="{{themePrimaryButtons}}" class="smaller-progress-circular" ng-if="item.pendingVerify" class="md-primary" md-mode="indeterminate">
                     </md-progress-circular>
@@ -79,9 +78,28 @@
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
                         <span class="fa fa-check"></span>
                     </button>
-                    <button ng-if="!item.pendingVerify" style="transition: 0s;"  class="sb-row-button" ng-click="vm.openSchedulerEditMenu(item, $event);">
-                        <span class="fa fa-ellipsis-v"></span>
-                    </button>
+                    <!--ng-click="vm.openSchedulerEditMenu(item, $event);"-->
+                    <md-menu ng-show="!item.pendingVerify" md-theme="{{themePrimaryButtons}}">
+                        <md-button class="md-icon-button inline-action-button" ng-click="item.loadMenuContents = true; $mdOpenMenu(); $event.stopPropagation()"
+                                   style="margin: 0">
+                            <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+                        </md-button>
+                        <md-menu-content style="padding: 8px;">
+                            <md-menu-item ng-if="item.loadMenuContents">
+                                <md-button ng-click="item.editing = true">Edit Draft</md-button>
+                            </md-menu-item>
+                            <md-menu-item ng-if="item.loadMenuContents" ng-show="item.type == 'OBSERVATION'">
+                                <md-button ng-disabled="!item.sub_nr" title="{{!item.sub_nr ? 'Assign to a Sub-Array before verifying.' : ''}}"
+                                           ng-click="vm.verifyDraft(item)">Verify Draft</md-button>
+                            </md-menu-item>
+                            <md-menu-item ng-if="item.loadMenuContents">
+                                <md-button ng-click="vm.viewSBTasklog(item)">View Tasklog</md-button>
+                            </md-menu-item>
+                            <md-menu-item ng-if="item.loadMenuContents">
+                                <md-button ng-click="vm.removeDraft(item)">Delete Draft</md-button>
+                            </md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
                 </div>
             </div>
         </div>
@@ -108,26 +126,4 @@
     <div id="schedulerDatePickerMenu" class="datepickerMenu md-whiteframe-z1" ng-show="vm.showDatePicker">
         <datetimepicker data-ng-model="vm.currentSelectedDate" data-on-set-time="vm.onTimeSet(newDate, oldDate)"></datetimepicker>
     </div>
-
-    <div id="schedulerEditMenu" ng-show="vm.showEditMenu" class="datepickerMenu md-whiteframe-z3">
-        <md-list layout="column">
-            <md-item>
-                <md-button role="menuitem" style="width: 170px; font-size:14px; height: 38px; padding: 2px;"
-                           ng-click="vm.editCurrentItem()">Edit</md-button>
-            </md-item>
-            <md-item ng-if="vm.selectedScheduleDraft.type == 'OBSERVATION'">
-                <md-button role="menuitem" style="width: 170px; font-size:
-                14px; height: 38px; padding: 2px;" ng-disabled="!vm.selectedScheduleDraft.sub_nr" title="{{!vm.selectedScheduleDraft.sub_nr ? 'Assign to a Sub-Array before verifying.' : ''}}"
-                ng-click="vm.verifySelectedDraftRow()">Verify Draft</md-button>
-            </md-item>
-            <md-item>
-                <md-button role="menuitem" style="width: 170px; font-size:14px; height: 38px; padding: 2px;"
-                           ng-click="vm.viewSBTasklog()">View Tasklog</md-button>
-            </md-item>
-            <md-item>
-                <md-button role="menuitem" style="width: 170px; font-size: 14px; height: 38px; padding: 2px;" ng-click="vm.removeSelectedDraftRow()">Delete Draft</md-button>
-            </md-item>
-        </md-list>
-    </div>
-
 </div>
