--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -21,11 +21,11 @@
                     </div>
 
                     <span ng-show="subarray.state === 'active'"></span>
-                    <md-select md-theme="black" placeholder="Product" ng-model="subarray.product">
+                    <md-select placeholder="Product" ng-model="subarray.product">
                         <md-option value="c856M4k">c856M4k</md-option>
                         <md-option value="c856M32k">c856M32k</md-option>
                     </md-select>
-                    <md-select md-theme="black" placeholder="Band" ng-model="subarray.band">
+                    <md-select placeholder="Band" ng-model="subarray.band">
                         <md-option value="l">l</md-option>
                         <md-option value="s">s</md-option>
                         <md-option value="u">u</md-option>
