--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                             <span class="fa fa-th-large"></span>
                             <button>Receptor Health</button>
                         </div>
+                        <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
+                            <span class="fa fa-heartbeat"></span>
+                            <button>Custom Health & State</button>
+                        </div>
                     </md-item-content>
                 </md-item>
                 <md-item>
