using html5 mode to get rid of '#' in angular urls

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
     <!-- endbuild -->
+    <base href="/">
 </head>
 
 <!-- Place this asynchronous JavaScript just before your </body> tag -->
