--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -5,6 +5,7 @@
     </md-toolbar>
 
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('operator-control')">Operator Control</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('scheduler')" >Scheduler</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('sensor-graph')">Sensor Graphs</md-button>
@@ -12,7 +13,7 @@
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('weather')">Weather</md-button>
     </div>
     <div layout="row" layout-align="center center" class="" md-theme="{{vm.themePrimaryButtons}}">
-        <md-button class="md-raised md-primary" ng-click="vm.stateGo('alarms')">Alarms</md-button>
+        <md-button class="md-raised md-primary" ng-click="vm.stateGo('customHealth')">Custom Health</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('health')">Health and State</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorHealth')">Receptor Health</md-button>
         <md-button class="md-raised md-primary" ng-click="vm.stateGo('receptorStatus')">Receptor Status</md-button>
