--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
     </md-sidenav>
 
     <div layout="column" flex>
-        <md-toolbar id="main-top-toolbar" ng-if="loggedIn" ng-show="vm.showNavbar" ng-class="{'slide-in-vertically-navbar': loggedIn}" class="md-whiteframe-z1" md-theme-watch="true">
+        <md-toolbar id="main-top-toolbar" ng-if="loggedIn" ng-show="vm.showNavbar" class="md-whiteframe-z1" md-theme-watch="true"
+                    ng-class="{'slide-in-vertically-navbar': loggedIn, 'connection-lost-bg-bright': vm.connectionToMonitorLost}" >
             <div class="md-toolbar-tools" layout="row" style="padding: 0; max-height: 56px; min-height: 56px; overflow: hidden; margin-bottom: 16px;">
 
                 <md-button class="md-icon-button mainbar-navbar-button" ng-click="vm.toggleLeftSidenav()">
