--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -198,7 +198,7 @@
         </md-toolbar>
         <multi-line-chart flex data="vm.sensorData" redraw-function="vm.redrawChart" clear-function="vm.clearChart"
                           remove-sensor-function="vm.removeSensorLine" y-max="vm.yAxisMaxValue"
-                          y-min="vm.yAxisMinValue"></multi-line-chart>
+                          y-min="vm.yAxisMinValue" mouse-over-tooltip="true"></multi-line-chart>
         <div layout="row" class="floating-chart-actions">
             <!--<md-button class="md-icon-button"-->
             <!--ng-click="vm.showHelp($event)">-->
