--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -175,9 +175,9 @@
             </button>
         </md-chips>
         <multi-line-chart ng-show="vm.showChart" flex redraw-function="vm.redrawChart" hide-context-zoom="true"
-                          clear-function="vm.clearChart" class="dot-hide sensor-list-multi-line-chart"
+                          clear-function="vm.clearChart" class="sensor-list-multi-line-chart"
                           remove-sensor-function="vm.removeSensorLine" y-max="vm.yAxisMaxValue"
-                          y-min="vm.yAxisMinValue"></multi-line-chart>
+                          y-min="vm.yAxisMinValue" mouse-over-tooltip="true"></multi-line-chart>
         <div resizeable=".sensor-list-chart-container" class="resize-grip">
             <span flex class="fa fa-arrows-v"></span>
         </div>
