--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
     <!-- endbuild -->
-    <base href="/">
+    <!--todo: using this base tag breaks relative paths for includes like css, js and images-->
+    <!--figure that out before using the base element-->
+    <!--<base href="/">-->
 </head>
 
 <!-- Place this asynchronous JavaScript just before your </body> tag -->
