wip - first commit for weather display

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 <script src="app/d3/d3-gantt-chart.js"></script>
 <script src="app/d3/multi-line-chart.js"></script>
+<script src="app/d3/multi-line-two-y-axis-chart.js"></script>
 <script src="app/d3/d3-service.js"></script>
 <script src="app/d3/d3-util-service.js"></script>
 <script src="app/d3/receptor-pointing-equatorial.js"></script>
@@ -84,6 +85,7 @@
 <script src="app/d3/receptor-health-icicle-map.js"></script>
 <script src="app/d3/receptor-health-sunburst-map.js"></script>
 <script src="app/d3/status-single-level-tree-map.js"></script>
+<script src="app/d3/compass-chart.js"></script>
 
 <script src="app/app.js"></script>
 <script src="app/about/about.js"></script>
@@ -214,6 +216,12 @@
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('video')">
                         <span class="fa fa-video-camera"></span>
                         <button>Video</button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('weather')">
+                        <span class="fa fa-cloud"></span>
+                        <button>Weather</button>
                     </md-item-content>
                 </md-item>
                 <md-item>
