--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -1,3 +1,108 @@
-<div class="view-container" ng-controller="WeatherCtrl">
-    Weather happens.
+<div flex layout="column" ng-controller="WeatherCtrl as vm" style="padding: 16px;">
+    <div layout="column">
+        <md-toolbar class="md-toolbar-tools md-whiteframe-z1">
+            <span>Sensor Values</span>
+        </md-toolbar>
+        <div class="md-whiteframe-z1" flex style="padding: 8px;" layout="row">
+            <compass-chart redraw-function="vm.redrawCompass" style="min-width: 150px; min-height: 150px;">
+            </compass-chart>
+            <div layout="column" style="margin-left: 24px;">
+                <div ng-repeat="sensor in vm.ancResource.sensorList track by $index" title="{{sensor.description}}"
+                     class="resource-sensor-item"
+                     layout="row" class="unselectable">
+                    <span style="min-width: 120px" ng-class="vm.classNameFromPythonID(sensor)">{{sensor.name}}</span>
+                    <!--<span class="resource-sensor-status-item" ng-show="sensor.sensorValue"-->
+                          <!--ng-class="vm.sensorClass(sensor.status)">{{sensor.status}}</span>-->
+                    <!--<span style="min-width: 80px" ng-show="sensor.sensorValue">{{sensor.timestamp}}</span>-->
+                    <span flex class="resource-sensor-value-item"
+                          ng-show="sensor.sensorValue">{{sensor.value | number:1}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div layout="column" style="margin-top: 8px;" flex>
+        <md-toolbar class="md-toolbar-tools-medium md-whiteframe-z1" style="padding-right: 0">
+            <span flex>Pressure, Humidity and Temperature</span>
+            <md-menu md-theme="{{themePrimaryButtons}}" style="margin: 0">
+                <md-button class="md-icon-button inline-action-button" ng-click="$mdOpenMenu()"
+                           style="margin-left: 0px; margin-right: 8px;">
+                    <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
+                </md-button>
+                <md-menu-content width="4" style="padding-left: 16px;">
+                    <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showOptionsChanged()"
+                                     ng-click="$event.stopPropagation()">
+                            Show Grid Lines
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-checkbox disabled class="md-primary" ng-model="vm.useFixedRightYAxis"
+                                     ng-click="$event.stopPropagation()">
+                            Use Fixed Right Y Axis Values
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item ng-if="vm.useFixedRightYAxis">
+                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
+                             style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                            <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                                class="md-primary" title="Set the desired Right Y-Axis Minimum Value">
+                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisRightMinValue"
+                                       ng-change="vm.showOptionsChanged()" type="number"
+                                       ng-model-options="{ debounce: 300 }">
+                            </md-input-container>
+                        </div>
+                    </md-menu-item>
+                    <md-menu-item ng-if="vm.useFixedRightYAxis">
+                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
+                             style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                            <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                                class="md-primary" title="Set the desired Right Y-Axis Maximum Value">
+                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisRightMaxValue"
+                                       ng-change="vm.showOptionsChanged()" type="number"
+                                       ng-model-options="{ debounce: 300 }">
+                            </md-input-container>
+                        </div>
+                    </md-menu-item>
+                    <md-menu-item>
+                        <md-checkbox disabled class="md-primary" ng-model="vm.useFixedYAxis"
+                                     ng-click="$event.stopPropagation()">
+                            Use Fixed Left Y Axis Values
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item ng-if="vm.useFixedYAxis">
+                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
+                             style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                            <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Min:</label>
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                                class="md-primary" title="Set the desired Y-Axis Minimum Value">
+                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
+                                       ng-change="vm.showOptionsChanged()" type="number"
+                                       ng-model-options="{ debounce: 300 }">
+                            </md-input-container>
+                        </div>
+                    </md-menu-item>
+                    <md-menu-item ng-if="vm.useFixedYAxis">
+                        <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" ng-click="$event.stopPropagation()"
+                             style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
+                            <label style="width: 43px; font-weight: normal; margin-top: 4px;">Y Max:</label>
+                            <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0px;"
+                                                class="md-primary" title="Set the desired Y-Axis Maximum Value">
+                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
+                                       ng-change="vm.showOptionsChanged()" type="number"
+                                       ng-model-options="{ debounce: 300 }">
+                            </md-input-container>
+                        </div>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </md-toolbar>
+        <div class="md-whiteframe-z1" flex style="padding: 8px;" layout="column">
+            <multi-line-two-y-axis-chart flex redraw-function="vm.redrawChart" clear-function="vm.clearChart" class="sensor-list-multi-line-chart"
+                                         remove-sensor-function="vm.removeSensorLine" y-left-max="vm.yAxisMaxValue"
+                                         y-left-min="vm.yAxisMinValue" y-right-min="vm.yAxisRightMinValue" y-right-max="vm.yAxisRightMaxValue" mouse-over-tooltip="true"></multi-line-two-y-axis-chart>
+        </div>
+    </div>
+
 </div>
